bk_ida/gccida/c3/gen_formal_list_for_func_def
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_func_def/src/c-aux-info.c:710:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *formal_decl; // [rsp+10h] [rbp-20h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_func_def/src/c-aux-info.c:713:25: error: use of undeclared identifier 'arg0'
formal_list = ( char *)&arg0; 
                        ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/gen_formal_list_for_func_def/src/obj/c-aux-info.o] Error 1
